# pydataops

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: Collector.py  CreateData.py  DataPath.py  __init__.py  availability.py  cli.py  eval.py
src/operators/: BaseOperator.py  ModinDaskOperator.py  ModinRayOperator.py  PandasOperator.py  PolarsOperator.py  PySparkOperator.py  VaexOperator.py  __init__.py
src/operators/tests/: ModinRayOperator_test.py  PandasOperator_test.py  PolarsOperator_test.py  PySparkOperator_test.py  VaexOperator_test.py  setup_test_env.py  test_operator_correctness.py  test_operator_execution.py
src/operators/tests/data/: aggregate.csv  groupby.csv  join.csv  primary.csv  secondary.csv
