[tool.poetry]
name = "pydataops"
version = "0.1.0"
description = "Test multiple Python data processing libraries"
authors = ["Gustavo Maia <>"]
packages = [
    { include = "src" }
]

[tool.poetry.scripts]
pydataops = 'src.cli:main'

[tool.poetry.dependencies]
python = "^3.8.12"
click = "<=8.0.4"
Faker = "^13.13.0"
tqdm = "^4.64.0"
pandas = "^1.4.3"
pyspark = "^3.3.0"
modin = "^0.15.2"
ray = "^1.13"
dask = {version = "^2022.6.1", extras = ["complete"]}

[tool.poetry.extras]
pandas = ["pandas"]
pyspark = ["pyspark"]
modin-ray = ["modin", "ray"]
modin-dask = ["modin", "dask"]

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
pytest = "^7.1.2"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
