[tool.poetry]
name = "pydataops"
version = "0.1.0"
description = "Test multiple Python data processing libraries"
authors = []
packages = [
    { include = "src" }
]

[tool.poetry.scripts]
pydataops = 'src.cli:main'

[tool.poetry.dependencies]
python = "^3.8.12"
click = "<=8.0.4"
Faker = "^13.13.0"
tqdm = "^4.64.0"
pandas = {version = "^1.4.3", optional = true}
pyspark = {version = "^3.3.0", optional = true}
modin = {version = "^0.15.2", optional = true}
ray = {version = "^1.13", optional = true}
dask = {version = "^2022.6.1", extras = ["complete"], optional = true}
vaex = {version = "^4.9.2", optional = true}

[tool.poetry.extras]
pandas = ["pandas"]
pyspark = ["pyspark"]
modin-ray = ["modin", "ray"]
modin-dask = ["modin", "dask"]
vaex = ["vaex"]

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
pytest = "^7.1.2"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
