[tool.poetry]
name = "pydataops"
version = "0.1.0"
description = "Test multiple Python data processing libraries"
authors = []
packages = [
    { include = "src" }
]

[tool.poetry.scripts]
pydataops = 'src.cli:main'

[tool.poetry.dependencies]
python = ">=3.7.1,<3.8"
click = "<=8.0.4"
Faker = "^13.14.0"
tqdm = "^4.64.0"
pandas = "<1.4.3"
pyspark = "^3.3.0"
modin = "<0.15.2"
ray = "<1.13.0"
dask = { version = "<2022.6.1", extras = ["complete"] }
vaex = "^4.9.2"
polars = "^0.13.50"
protobuf = "<3.20"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
pytest = "^7.1.2"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
